Add Ko-fi support buttons and remove GitHub links from all pages

--- a/discord.html
+++ b/discord.html
@@ -77,7 +77,7 @@
 
         <footer>
             <p>RustyBot Discord is an unofficial EVE Online tool. Not affiliated with CCP Games.</p>
-            <p><a href="#" target="_blank">View on GitHub</a></p>
+            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#f573f1', 'X8X71LW303');kofiwidget2.draw();</script>
         </footer>
     </div>
 </body>
