--- a/index.html
+++ b/index.html
@@ -55,8 +55,9 @@
 
         <footer>
             <p>RustyBot is an unofficial EVE Online tool, not affiliated with CCP Games.</p>
-            <p><a href="https://github.com/nexis84/Rusty_Discord" target="_blank">View Project on GitHub</a></p>
+            <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Support me on Ko-fi', '#f573f1', 'X8X71LW303');kofiwidget2.draw();</script>
         </footer>
     </div>
+
 </body>
 </html>
