Update links to use rustybot.co.uk URLs

--- a/giveaway.html
+++ b/giveaway.html
@@ -18,7 +18,7 @@
             <img src="rusty_bot.png" alt="RustyBot Giveaway Logo" class="logo">
             <h1>Welcome to the <span>Giveaway Tool</span></h1>
             <p class="subtitle">Your customizable application for running EVE Online giveaways on Twitch.</p>
-            <a href="#" class="cta-button">Download RustyBot</a>
+            <a href="https://rustybot-quick-bpc-calcualtor.onrender.com" class="cta-button" target="_blank">Launch Giveaway Tool</a>
         </header>
 
         <main>
