--- a/giveaway.html
+++ b/giveaway.html
@@ -18,10 +18,21 @@
             <img src="rusty_bot.png" alt="RustyBot Giveaway Logo" class="logo">
             <h1>Welcome to the <span>Giveaway Tool</span></h1>
             <p class="subtitle">Your customizable application for running EVE Online giveaways on Twitch.</p>
-            <a href="https://rustybot-quick-bpc-calcualtor.onrender.com" class="cta-button" target="_blank">Launch Giveaway Tool</a>
         </header>
 
         <main>
+            <section id="app">
+                <h2 class="section-title">Giveaway Tool</h2>
+                <div style="width: 100%; max-width: 1200px; margin: 0 auto;">
+                    <iframe 
+                        src="https://rustybot-quick-bpc-calcualtor.onrender.com/" 
+                        style="width: 100%; height: 800px; border: 2px solid var(--secondary-color); border-radius: 8px;"
+                        title="RustyBot Giveaway Tool"
+                        allowfullscreen>
+                    </iframe>
+                </div>
+            </section>
+
             <section id="features">
                 <h2 class="section-title">Features</h2>
                 <div class="features-grid">
