--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <h2>Discord Bot</h2>
                     <p>For Discord Communities</p>
                 </a>
-                <a href="https://www.rustybot.co.uk/bpc-calculator.html" class="tool-card" target="_blank">
+                <a href="bpc-calculator.html" class="tool-card">
                     <h2>BPC Calculator</h2>
                     <p>Manufacturing Profits</p>
                 </a>
