--- a/bpc-calculator.html
+++ b/bpc-calculator.html
@@ -23,11 +23,43 @@
         <main>
             <section id="app">
                 <h2 class="section-title">BPC Calculator</h2>
-                <div style="width: 100%; max-width: 1200px; margin: 0 auto;">
+                <style>
+                    /* Larger, responsive embed for the BPC calculator */
+                    :root {
+                        /* Sized to fit the calculator form properly */
+                        --bpc-embed-height: 1380px; /* adjusted height */
+                        --bpc-embed-max-width: 1500px; /* matches form width */
+                    }
+
+                    .bpc-embed-wrapper {
+                        width: 100%;
+                        max-width: var(--bpc-embed-max-width);
+                        margin: 0 auto;
+                        padding: 8px;
+                    }
+
+                    .bpc-embed {
+                        width: 100%;
+                        height: var(--bpc-embed-height);
+                        min-height: 700px; /* reasonable minimum */
+                        border: 2px solid var(--secondary-color);
+                        border-radius: 10px;
+                        box-shadow: 0 6px 18px rgba(0,0,0,0.08);
+                        overflow: hidden; /* hide scrollbar */
+                    }
+
+                    /* On very small screens, keep a sensible size */
+                    @media (max-width: 640px) {
+                        .bpc-embed { height: 900px; }
+                    }
+                </style>
+
+                <div class="bpc-embed-wrapper">
                     <iframe 
                         src="https://rustybot-quick-bpc-calcualtor.onrender.com/" 
-                        style="width: 100%; height: 800px; border: 2px solid var(--secondary-color); border-radius: 8px;"
+                        class="bpc-embed"
                         title="RustyBot BPC Calculator"
+                        scrolling="no"
                         allowfullscreen>
                     </iframe>
                 </div>
