Fix Classified Hulls link to use correct relative path

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <h2>BPC Calculator</h2>
                     <p>Manufacturing Profits</p>
                 </a>
-                <a href="https://www.rustybot.co.uk/Classified Hulls" class="tool-card">
+                <a href="ship-guess-game/index.html" class="tool-card">
                     <h2>Classified Hulls</h2>
                     <p>Ship Guess Game</p>
                 </a>
